@@ -20,6 +20,10 @@ import {
 } from '../hooks';
 import { getBlocksConfiguration } from 'wcstripe/blocks/utils';
 import WCStripeAPI from 'wcstripe/api';
+import {
+	maybeShowCashAppLimitNotice,
+	removeCashAppLimitNotice,
+} from 'wcstripe/stripe-utils/cash-app-limit-notice-handler';
 
 /**
  * Gets the Stripe element options.
@@ -101,6 +105,10 @@ const PaymentProcessor = ( {
 } ) => {
 	const stripe = useStripe();
 	const elements = useElements();
+	const [
+		selectedPaymentMethodType,
+		setSelectedPaymentMethodType,
+	] = useState( null );
 	const [ isPaymentElementComplete, setIsPaymentElementComplete ] = useState(
 		false
 	);
@@ -230,6 +238,19 @@ const PaymentProcessor = ( {
 		]
 	);
 
+	// Show the Cash App limit notice if the payment method is selected and the cart amount is higher than 2000 USD.
+	useEffect( () => {
+		if ( selectedPaymentMethodType === 'cashapp' ) {
+			maybeShowCashAppLimitNotice(
+				'.wc-block-checkout__payment-method .wc-block-components-notices',
+				Number( getBlocksConfiguration()?.cartTotal ),
+				true
+			);
+		} else {
+			removeCashAppLimitNotice();
+		}
+	}, [ selectedPaymentMethodType ] );
+
 	usePaymentCompleteHandler(
 		api,
 		stripe,
@@ -249,8 +270,9 @@ const PaymentProcessor = ( {
 
 	useStripeLink( api, elements, paymentMethodsConfig );
 
-	const updatePaymentElementCompletionStatus = ( event ) => {
-		setIsPaymentElementComplete( event.complete );
+	const onSelectedPaymentMethodChange = ( { value, complete } ) => {
+		setSelectedPaymentMethodType( value.type );
+		setIsPaymentElementComplete( complete );
 	};
 
 	return (
@@ -269,7 +291,7 @@ const PaymentProcessor = ( {
 			/>
 			<PaymentElement
 				options={ getStripeElementOptions() }
-				onChange={ updatePaymentElementCompletionStatus }
+				onChange={ onSelectedPaymentMethodChange }
 				className="wcstripe-payment-element"
 			/>
 		</>
