@@ -1,5 +1,6 @@
 *** Changelog ***
 = 8.5.0 - 2024-xx-xx =
+* Tweak - Add a notice in checkout for Cash App transactions above 2000 USD to inform customers about the decline risk.
 * Fix - When using a saved payment method, update the payment method's address immediately upon checkout. Fixes issues where Stripe may throw address validation errors.
 * Tweak - Add a statement descriptor preview for Cash App Payments.
 * Add - Allow customizing the title and description of the UPE payment methods.
